# split-keeb-battery

./: README.md  ble_scanner.py  pyproject.toml  run.py
zmk_battery/: __init__.py  __main__.py  battery_monitor.py  system_tray.py
